--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,12 @@ jobs:
         with:
           python-version: '3.13'
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential libffi-dev git pkg-config gcc-arm-none-eabi
+          pip install pyelftools dash dash_bootstrap_components gdown pandas plotly
+
       - name: Install mamba
         uses: mamba-org/setup-micromamba@v2.0.6
         with:
